# ha-blink-clip-downloader

./: .gitignore  LICENSE  README.md  pyrightconfig.json  repository.yaml
.github/workflows/: build.yaml  ci.yaml
blink_clip_downloader/: .coverage  CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  build.yaml  config.yaml  pyproject.toml  requirements.txt
blink_clip_downloader/blink_downloader/: __init__.py  __main__.py  app.py  archiver.py  config.py  database.py  digest.py  downloader.py  event_watcher.py  manifest.py  media_server.py  notifier.py  storage.py  tracker.py
blink_clip_downloader/blink_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
blink_clip_downloader/rootfs/: run.sh
blink_clip_downloader/rootfs/etc/s6-overlay/s6-rc.d/blink-downloader/: finish  run
blink_clip_downloader/rootfs/etc/services.d/blink-downloader/: finish  run
blink_clip_downloader/rootfs/etc/services.d/blink_downloader/: finish  run
blink_clip_downloader/tests/: conftest.py  test_app.py  test_archiver.py  test_config.py  test_database.py  test_digest.py  test_downloader.py  test_event_watcher.py  test_manifest.py  test_media_server.py  test_notifier.py  test_storage.py  test_tracker.py
blink_clip_downloader/translations/: en.yaml
