[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blink-downloader"
version = "1.0.0"
description = "Home Assistant add-on: Blink Clip Downloader"
requires-python = ">=3.11"
dependencies = [
    "blinkpy>=0.23.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "python-slugify>=8.0.1",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7.6",
]

[tool.setuptools.packages.find]
include = ["blink_downloader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["blink_downloader"]
omit = ["tests/*", "blink_downloader/__main__.py"]

[tool.coverage.report]
fail_under = 78
show_missing = true
