[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blink-downloader"
version = "2.5.5"
description = "Home Assistant add-on: Blink Clip Downloader"
authors = [{name = "Brian Baggs", email = "brianbaggs@hotmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "blinkpy>=0.23.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "python-slugify>=8.0.1",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7.6",
]

[tool.setuptools.packages.find]
include = ["blink_downloader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["blink_downloader"]
omit = [
    "tests/*",
    "blink_downloader/__main__.py",
    "blink_downloader/media_server.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pyright]
include = ["blink_downloader", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "build",
    "dist",
    "**/.*"
]

pythonVersion = "3.13"
typeCheckingMode = "standard"

reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

# Important for Home Assistant + Blink API dynamic responses
reportOptionalMemberAccess = "warning"
reportOptionalOperand = "warning"
reportGeneralTypeIssues = "warning"